[app] - Correct spelling for cloudfront, change styling for links on mobile, and change layout for tablets.

--- a/client/src/styles/ContactInfo.css
+++ b/client/src/styles/ContactInfo.css
@@ -42,4 +42,7 @@
 }
 
 @media screen and (max-width: 475px) {
+  .contact-icon:hover {
+    color: #323b49;
+  }
 }
