--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -34,4 +34,7 @@
 }
 
 @media screen and (max-width: 475px) {
+  .nav-link:hover {
+    color: #323b49;
+  }
 }
